# monorepo

./: .bazelrc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .ruff.toml  BUILD.bazel  CLAUDE.md  CLAUDE_SESSION_STATE.md  CODEX.md  MODULE.bazel  README.md  pyproject.toml  pytest.ini  requirements_lock.txt
.codex/: dashboard.md  decisions.md
.codex/plans/: sprint_2025-04-23.md
.github/: CI_COST_GUIDELINES.md  TESTING_CI.md  trivy.yaml
.github/actions/check-ci-cost/: action.yml
.github/actions/report-ci-cost/: action.yml
.github/workflows/: bazel.yml  container-publish.yml  python-ci-test.yml  python-ci.yml
docs/: PRD.md  README.md  container_cost_optimization.md  container_registry_auth.md  container_workflow.md  registry_recommendation.md
docs/decisions/: README.md  decisions.md
docs/planning/: README.md  dashboard.md  roadmap.md
docs/planning/sprints/: sprint_2025-04-23.md  sprint_2025-05-06.md
docs/reports/: README.md  work_summary_2025-04-23.md  work_summary_2025-04-24.md  work_summary_2025-05-06.md  work_summary_2025-05-07.md  work_summary_2025-05-08.md  work_summary_2025-05-09.md
go/hello_go/: BUILD.bazel
python/hello_python/: BUILD.bazel  module_python.py  test_hello_python.py
python/todost/: .env.example  BUILD.bazel  README.md  __init__.py  integration_test_todost.py  para_rules.yaml  run_todost.sh  test_todost.py  todost.py
rust/hello_rust/: BUILD.bazel
scaffolding/: PYTHON_SCAFFOLD_README.md  scaffold_go.sh  scaffold_python.sh  scaffold_rust.sh
scaffolding/python_cookiecutter/: cookiecutter.json
scaffolding/python_cookiecutter/{{cookiecutter.module_name}}/: BUILD.bazel  README.md  test_{{cookiecutter.module_name}}.py  {{cookiecutter.module_name}}.py
scaffolding/typescript_hygen/: new-module.ejs.t
scripts/: README.md  generate_requirements.sh  setup_venv.sh
tools/oci/: BUILD.bazel  base_images.bzl  registry.bzl
tools/rules/: BUILD.bazel  oci_python.bzl
ts/hello_ts/: BUILD.bazel  index.ts  tsconfig.json
