load("@rules_python//python:defs.bzl", "py_library", "py_binary", "py_test")

py_library(
    name = "{{cookiecutter.module_name}}_lib",
    srcs = ["{{cookiecutter.module_name}}.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "{{cookiecutter.module_name}}",
    srcs = ["{{cookiecutter.module_name}}.py"],
    deps = [":{{cookiecutter.module_name}}_lib"],
    main = "{{cookiecutter.module_name}}.py",
)

py_test(
    name = "{{cookiecutter.module_name}}_test",
    srcs = ["test_{{cookiecutter.module_name}}.py"],
    deps = [":{{cookiecutter.module_name}}_lib"],
    main = "test_{{cookiecutter.module_name}}.py",
)
